# Top-TieR-Global-HUB-AI

./: .dockerignore  .env.example  .env.neo4j.example  .env.prod  .env.saudi_banks  .env.test  .gitignore  .yamllint.yml  =5.0.0  AGENT_PLAYBOOK.md  ARCHITECTURE.md  BOT_VALIDATION.md  CHECKLIST.md  CHECK_CONNECTIONS_QUICKREF.md  CHECK_CONNECTIONS_README.md  CLAUDE_PROMPT.md  CODEOWNERS  CODEX_PROJECT_INSTRUCTIONS.md  CODEX_REQUEST_TEMPLATE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_FIX.md  DOCKER_DEPLOY.md  DOCKER_FIX_README.md  Dockerfile  Dockerfile.chatgpt-api  Dockerfile.llm_api  Dockerfile.python  Dockerfile.rust  Dockerfile.telegram  ENGINEERING_NOTICE.md  ENHANCED_FEATURES.md  FAST  FIXES_SUMMARY.md  HEALTH_CHECK_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LEXCODE_MANIFESTO.md  (+105 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  auto-assign.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md
.well-known/: ai-plugin.json
LexCodeChat/: ChatBubble.swift  ContentView.swift  LexCodeChatApp.swift  Models.swift  Services.swift
adapters/: README.md
ai_agents/: __init__.py  base.py  registry.py
ai_prompts/: banking_compliance.txt  document_analysis.txt  legal_analysis.txt  medical_info.txt  review_code.txt  tech_trends.txt
alert-bridge/: Dockerfile  webhook_bridge.py
analysis/: ULTRA_REPORT.md  ultra_report.json  ultra_report.md
api/: Dockerfile  main.py
api_server/: Dockerfile  __init__.py  main.py  requirements.txt
app/: __init__.py
backend/: .env.example  main.py  requirements.txt
bot/: .env.example  README.md  __init__.py  i18n.py  main.py  requirements.txt
committee_service/: __init__.py  main.py
config/: lexnexus-config.json  monitoring.yaml  security.yaml  testing.yaml
core/: Cargo.toml  Dockerfile  README.md  __init__.py  cache_middleware.py  main.py  metrics.py  model_router.py  rate_limiter.py
dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.json
dashboards/: kb.json  security.json
data/: .gitignore
docs/: AI_AUTO_REVIEWER.md  API.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BOT_COMMANDS_REFERENCE.md  BOT_IMPLEMENTATION_SUMMARY.md  BOT_VALIDATION.md  CHECK_CONNECTIONS_GUIDE.md  CODEQL_README.md  (+36 more)
(+631 files in other folders)
